; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/ntpd/extr_ntp_prio_q.c_append_queue.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/ntpd/extr_ntp_prio_q.c_append_queue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @append_queue(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  br label %5

5:                                                ; preds = %10, %2
  %6 = load i32*, i32** %4, align 8
  %7 = call i32 @empty(i32* %6)
  %8 = icmp ne i32 %7, 0
  %9 = xor i1 %8, true
  br i1 %9, label %10, label %15

10:                                               ; preds = %5
  %11 = load i32*, i32** %3, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = call i32 @dequeue(i32* %12)
  %14 = call i32 @enqueue(i32* %11, i32 %13)
  br label %5

15:                                               ; preds = %5
  %16 = load i32*, i32** %4, align 8
  %17 = call i32 @destroy_queue(i32* %16)
  ret void
}

declare dso_local i32 @empty(i32*) #1

declare dso_local i32 @enqueue(i32*, i32) #1

declare dso_local i32 @dequeue(i32*) #1

declare dso_local i32 @destroy_queue(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
